# drake-ros

./: .clang-format  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CPPLINT.cfg  Dockerfile  INSTALL_MAC_ARM64.md  LICENSE  README.md  colcon_defaults.yaml  default.bazelrc  docker-README.md  docker-compose.yml  drake-ros-env.sh  fix_ament_lint.sh  fix_bazel_lint.sh  pyproject.toml  run_all_tests.sh
bazel_ros2_rules/: .bazeliskrc  .bazelrc  .clang-format  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
bazel_ros2_rules/lib/: BUILD.bazel  README.md  ament_index.bzl  extensions.bzl  kwargs.bzl  repos.bzl  rosidl.bzl
bazel_ros2_rules/network-isolation/: BUILD.bazel  isolate.cc  network_isolation.cc  network_isolation_py.cc
bazel_ros2_rules/network_isolation/: BUILD.bazel  README.md  isolate.cc  network_isolation.cc  network_isolation.h  network_isolation_py.cc
bazel_ros2_rules/ros2/: BUILD.bazel  README.md  _calculate_rosidl_capitalization.bzl  ament_index.bzl  compute_system_rosdeps.py  defs.bzl  generate_build_file.py  generate_distro_file.py  ros_cc.bzl  ros_launch.bzl  ros_launch.py.tpl  ros_py.bzl  rosidl.bzl  scrape_distribution.py
bazel_ros2_rules/setup/: install_prereqs.sh  packages-apt.txt  prereqs.sh
bazel_ros2_rules/test_isolation/: BUILD.bazel  create_linux_namespaces.cc  create_linux_namespaces.h  isolate.cc  unshare.cc
bazel_ros2_rules/tools/: execute.bzl  python_repository.bzl
drake_ros/: .bazeliskrc  .bazelrc  .clang-format  BUILD.bazel  CMakeLists.txt  CPPLINT.cfg  MODULE.bazel  README.md  WORKSPACE  drake.bzl  package.xml  pycodestyle.ini  required_packages.bzl
drake_ros/core/: BUILD.bazel  CMakeLists.txt  camera_info_system.cc  camera_info_system.h  cc_py.cc  clock_system.cc  clock_system.h  drake_ros.cc  drake_ros.h  drake_ros_core.py  geometry_conversions.cc  geometry_conversions.h  geometry_conversions_pybind.h  geometry_typecast.h  image_system.cc  image_system.h  module_py.cc  publisher.cc  publisher.h  qos_pybind.h  rgbd_system.cc  rgbd_system.h  ros_idl_pybind.h  ros_interface_system.cc  ros_interface_system.h  ros_publisher_system.cc  ros_publisher_system.h  ros_subscriber_system.cc  ros_subscriber_system.h  serializer.h  serializer_interface.h  subscription.cc  subscription.h
drake_ros/drake_ros/: BUILD.bazel  CMakeLists.txt  README.md  __init__.py  cc_py.cc  cc_py_generic_typecaster.cc  drake_ros_pybind.h
drake_ros/env-hooks/: drake_library_path.sh.in  pydrake_pythonpath.sh.in
drake_ros/setup/: install_prereqs.sh  packages-apt.txt
drake_ros/test/: drake_ros_py_test.py  import_test.py  odr_py_helpers_py.cc
drake_ros/tf2/: BUILD.bazel  CMakeLists.txt  README.md  __init__.py  cc_py.cc  drake_ros_tf2_pybind.h  internal_name_conventions.h  module_py.cc  name_conventions.cc  name_conventions.h  package.xml  scene_tf_broadcaster_system.cc  scene_tf_broadcaster_system.h  scene_tf_system.cc  scene_tf_system.h
drake_ros/tools/: BUILD.bazel
drake_ros/viz/: BUILD.bazel  CMakeLists.txt  README.md  cc_py.cc  contact_markers_system.cc  contact_markers_system.h  defaults.h  drake_ros_viz_pybind.h  heatmap_png.inc  heatmap_png_generate.py  internal_name_conventions.h  module_py.cc  name_conventions.cc  name_conventions.h  package.xml  rviz_visualizer.cc  rviz_visualizer.h  scene_markers_system.cc  scene_markers_system.h
drake_ros_core/: .bazelrc  .clang-format  BUILD.bazel  CMakeLists.txt  CPPLINT.cfg  README.md  WORKSPACE  package.xml
drake_ros_core/env-hooks/: drake_library_path.sh.in  pydrake_pythonpath.sh.in
drake_ros_core/src/: cc_py.cc  clock_system.cc  conversions.cc  drake_ros.cc  drake_ros.cpp  geometry_conversions.cc  module_py.cc  publisher.cc  publisher.cpp  publisher.h  publisher.hpp  ros_interface_system.cc  ros_interface_system.cpp  ros_publisher_system.cc  ros_publisher_system.cpp  ros_subscriber_system.cc  ros_subscriber_system.cpp  subscription.cc  subscription.cpp  subscription.h  subscription.hpp
drake_ros_core/test/: test_conversions.cc  test_drake_ros.cc  test_drake_ros.cpp  test_geometry_conversions.cc  test_geometry_conversions_py.py  test_pub_sub.cc  test_pub_sub.cpp  test_pub_sub.py
drake_ros_examples/: .bazeliskrc  .bazelrc  .clang-format  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  package.xml
drake_ros_examples/examples/: CMakeLists.txt
drake_ros_examples/setup/: install_prereqs.sh  packages-apt.txt  packages-ros2.txt
drake_ros_examples/test/: bazel_ros_testing.py  drake_ros_py_import_test.py  parse_ros_model_test.py
drake_ros_introspection/: CMakeLists.txt  package.xml
drake_ros_introspection/src/: introspection_demo.cc  introspection_demo_iiwa.cc  introspection_demo_sine.cc
drake_ros_systems/: CMakeLists.txt  README.md  package.xml
drake_ros_systems/example/: CMakeLists.txt  iiwa_manipulator.cpp  iiwa_manipulator.py  rs_flip_flop.cpp  rs_flip_flop.py
drake_ros_systems/src/: drake_ros.cpp  publisher.cpp  publisher.hpp  ros_clock_system.cpp  ros_interface_system.cpp  ros_publisher_system.cpp  ros_subscriber_system.cpp  rviz_visualizer.cpp  scene_markers_system.cpp  scene_tf_broadcaster_system.cpp  scene_tf_system.cpp  subscription.cpp  subscription.hpp  tf_broadcaster_system.cpp
drake_ros_systems/test/: drake_ros.cpp  integration.cpp  test_scene_markers.cpp  test_tf_broadcaster.cpp  test_tf_broadcaster.py  test_type_conversion.cpp
drake_ros_tf2/: .bazelrc  .clang-format  BUILD.bazel  CMakeLists.txt  CPPLINT.cfg  README.md  WORKSPACE  package.xml  pycodestyle.ini
drake_ros_tf2/src/: name_conventions.cc  scene_tf_broadcaster_system.cc  scene_tf_broadcaster_system.cpp  scene_tf_system.cc  scene_tf_system.cpp
drake_ros_tf2/test/: test_name_conventions.cc  test_tf_broadcaster.cc  test_tf_broadcaster.cpp  test_tf_broadcaster.py  test_type_conversion.cc  test_type_conversion.cpp
drake_ros_viz/: .clang-format  BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE  package.xml
drake_ros_viz/src/: contact_markers_system.cc  contact_markers_system.cpp  (+4 more)
ros2_example_bazel_installed/: .bazelrc  .clang-format  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
(+642 files in other folders)
