load("@ros2//:ros_py.bzl", "ros_py_test")

py_library(
    name = "drake_ros_py",
    srcs = glob(["drake_ros/**"], exclude=["__pycache__"]),
    visibility = ["//visibility:public"],
    deps = [
        "//core:cc_py",
        "//tf2:cc_py",
        "//viz:cc_py",
    ],
)

ros_py_test(
    name = "drake_ros_py_test",
    srcs = ["test/drake_ros_py_test.py"],
    main = "test/drake_ros_py_test.py",
    deps = [":drake_ros_py"],
)
