module(name = "drake_ros")

bazel_dep(name = "rules_cc", version = "0.1.1")

DRAKE_COMMIT = "v1.43.0"

DRAKE_CHECKSUM = (
    "635c125187c6758b1bfc7698b59f6f9bfc64a902575e191cccce74be8c6f47ee"
)

bazel_dep(name = "drake")
archive_override(
    module_name = "drake",
    sha256 = DRAKE_CHECKSUM,
    strip_prefix = "drake-{}".format(DRAKE_COMMIT.lstrip("v")),
    urls = [x.format(DRAKE_COMMIT) for x in [
        "https://github.com/RobotLocomotion/drake/archive/{}.tar.gz",
    ]],
)

drake_dep_repositories = use_extension(
    "@drake//tools/workspace:default.bzl",
    "drake_dep_repositories",
)
use_repo(
    drake_dep_repositories,
    "eigen",
    "gtest",
    "python",
)

drake_dep_dev_repositories = use_extension(
    "@drake//tools/workspace:default.bzl",
    "drake_dep_repositories",
    dev_dependency = True,
)
use_repo(
    drake_dep_dev_repositories,
    "pycodestyle",
    "styleguide",
)

bazel_dep(name = "bazel_ros2_rules")
local_path_override(
    module_name = "bazel_ros2_rules",
    path = "../bazel_ros2_rules",
)

DRAKE_ROS_REQUIRED_PACKAGES = [
    "geometry_msgs",
    "rclpy",
    "rclcpp",
    "rosidl_runtime_c",
    "rosidl_typesupport_cpp",
    "tf2_eigen",
    "tf2_ros",
    "visualization_msgs",
    "rmw_cyclonedds_cpp",
]

DRAKE_ROS_TEST_DEPENDENCIES = [
    "test_msgs",
    "tf2_ros_py",
]

local_ros2 = use_extension(
    "@bazel_ros2_rules//lib:extensions.bzl",
    "local_ros2",
)
local_ros2.distribution(
    include_packages = (
        DRAKE_ROS_REQUIRED_PACKAGES +
        DRAKE_ROS_TEST_DEPENDENCIES
    ),
)
use_repo(local_ros2, ros2 = "local_ros2")

register_toolchains("@python//:all")
