module(name = "drake_ros")

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_python", version = "1.6.3")

DRAKE_COMMIT = "v1.51.0"

DRAKE_CHECKSUM = (
    "e0ffb23fbbec6cc6a7dfe11beed04bcd5583cdb4bf187271b1b0977f7c292f51"
)

bazel_dep(name = "drake")
archive_override(
    module_name = "drake",
    sha256 = DRAKE_CHECKSUM,
    strip_prefix = "drake-{}".format(DRAKE_COMMIT.lstrip("v")),
    urls = [x.format(DRAKE_COMMIT) for x in [
        "https://github.com/RobotLocomotion/drake/archive/{}.tar.gz",
    ]],
)

drake_dep_repositories = use_extension(
    "@drake//tools/workspace:default.bzl",
    "drake_dep_repositories",
)
use_repo(
    drake_dep_repositories,
    "eigen",
    "python",
)

bazel_dep(name = "bazel_ros2_rules")
local_path_override(
    module_name = "bazel_ros2_rules",
    path = "../bazel_ros2_rules",
)

DRAKE_ROS_REQUIRED_PACKAGES = [
    "geometry_msgs",
    "rclpy",
    "rclcpp",
    "rosidl_runtime_c",
    "rosidl_typesupport_cpp",
    "tf2_eigen",
    "tf2_ros",
    "visualization_msgs",
    "rmw_cyclonedds_cpp",
]

DRAKE_ROS_TEST_DEPENDENCIES = [
    "test_msgs",
    "tf2_ros_py",
]

local_ros2 = use_extension(
    "@bazel_ros2_rules//lib:extensions.bzl",
    "local_ros2",
)
local_ros2.distribution(
    include_packages = (
        DRAKE_ROS_REQUIRED_PACKAGES +
        DRAKE_ROS_TEST_DEPENDENCIES
    ),
)
use_repo(local_ros2, ros2 = "local_ros2")

register_toolchains("@python//:all")

bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
single_version_override(
    module_name = "googletest",
    # These patches must be the exact same as those in drake's MODULE.bazel
    # for the pinned drake version (see DRAKE_VERSION).
    # So that we have a consistent googletest drake_ros and drake.
    patches = [
        "//tools/workspace/googletest:patches/upstream/exception_shadowing.patch",  # noqa
        "//tools/workspace/googletest:patches/upstream/param_iterator_interface.patch",  # noqa
        "//tools/workspace/googletest:patches/add_printers.patch",
        "//tools/workspace/googletest:patches/defines.patch",
    ],
    # We must pin the same version as ~10 lines prior, because our patch to
    # MODULE.bazel doesn't apply correctly to other versions of googletest,
    # but Bazel's MVS selection will try to apply it anyway to all versions
    # being considered when resolving the dependency graph.
    version = "1.17.0.bcr.2",
)
