<?xml version="1.0"?>
<package format="2">
  <name>drake_ros</name>
  <version>0.1.0</version>
  <description>Drake systems to leverage core ROS 2 functionality.</description>
  <maintainer email="ian.mcmahon@tri.global">Ian McMahon</maintainer>
  <maintainer email="sloretz@openrobotics.org">Shane Loretz</maintainer>
  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <!--
  eigen3_cmake_module is needed to workaround Eigen's inability to forward
  its headers as transitive dependency. For more details, see:
  https://github.com/ros2/eigen3_cmake_module
  -->
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>eigen</build_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rosgraph_msgs</depend>
  <depend>rosidl_runtime_c</depend>
  <depend>rosidl_typesupport_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pycodestyle</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>test_msgs</test_depend>

  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>eigen</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
