# Copyright 2022 Open Source Robotics Foundation, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@ros2//:ros_cc.bzl", "ros_cc_test")

PYBIND_EXCLUDES = [
    "**/*_py.cc",
    "**/*_pybind.h",
]

# TODO(sloretz) more granular targets for static linking
cc_library(
    name = "drake_ros_core",
    srcs = glob(
        [
            "src/*.cc",
            "src/*.h",
        ],
        exclude = PYBIND_EXCLUDES,
    ),
    hdrs = glob(
        ["include/**/*.h"],
        exclude = PYBIND_EXCLUDES,
    ),
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "@drake//common:essential",
        "@drake//math:geometric_transform",
        "@drake//multibody/math:spatial_algebra",
        "@drake//systems/framework:leaf_system",
        "@eigen",
        "@ros2//:geometry_msgs_cc",
        "@ros2//:rclcpp_cc",
        "@ros2//:rosidl_runtime_c_cc",
        "@ros2//:rosidl_typesupport_cpp_cc",
    ],
)

ros_cc_test(
    name = "test_pub_sub",
    size = "small",
    srcs = ["test/test_pub_sub.cc"],
    rmw_implementation = "rmw_cyclonedds_cpp",
    deps = [
        ":drake_ros_core",
        "@com_google_googletest//:gtest_main",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework:diagram_builder",
        "@ros2//:rclcpp_cc",
        "@ros2//:test_msgs_cc",
        "@ros2//resources/rmw_isolation:rmw_isolation_cc",
    ],
)

ros_cc_test(
    name = "test_drake_ros",
    size = "small",
    srcs = ["test/test_drake_ros.cc"],
    rmw_implementation = "rmw_cyclonedds_cpp",
    deps = [
        ":drake_ros_core",
        "@com_google_googletest//:gtest_main",
        "@ros2//:rclcpp_cc",
        "@ros2//resources/rmw_isolation:rmw_isolation_cc",
    ],
)

ros_cc_test(
    name = "test_geometry_conversions",
    size = "small",
    srcs = ["test/test_geometry_conversions.cc"],
    rmw_implementation = "rmw_cyclonedds_cpp",
    deps = [
        ":drake_ros_core",
        "@com_google_googletest//:gtest_main",
    ],
)
