load("@ros2//:ros_py.bzl", "ros_py_test")
load("//tools/lint:lint.bzl", "add_lint_tests")

exports_files([
    "CPPLINT.cfg",
    ".clang-format",
])

ros_py_test(
    name = "drake_ros_py_import_test",
    srcs = ["test/drake_ros_py_import_test.py"],
    main = "test/drake_ros_py_import_test.py",
    rmw_implementation = "rmw_cyclonedds_cpp",
    deps = [
        "@drake_ros//:drake_ros_py",
    ],
)

add_lint_tests()
